[Test] Created Unit Test
Created unit test for CharactersViewModel
Created unit test for CharactersDetailViewModel
Created unit test for GetCharactersUseCase
Created unit test for GetCharacterDetailInfoUseCase
Created unit test for CharactersMapper
Created unit test for CharactersRepositoryImpl

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,9 @@ navigationCompose = "2.8.9"
 kotlinxSerializationJson = "1.8.0"
 org-jetbrains-kotlin-android = "1.8.0"
 
+kotlinxCoroutinesTest = "1.9.0"
+mockitoCore = "5.2.0"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -47,6 +50,10 @@ androidx-paging-runtime = { module = "androidx.paging:paging-runtime-ktx", versi
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoCore" }
 
 
 [plugins]
